--- a/src/config.json
+++ b/src/config.json
@@ -1,51 +1,51 @@
 {
   "site": {
-    "url": "https://drowsyindra.github.io",
+    "url": "https://toolren.github.io",
     "title": "博客",
     "description": "这是一个有理想的人走过的漫长道路",
-    "keywords": "Kunyi,blog,dream,indra,博客,逐梦",
+    "keywords": "Byte,blog,dream,NeZha,博客,逐梦",
     "lang": "zh-CN",
     "favicon": "/favicon.ico",
     "appleTouchIcon": "/apple-touch-icon.png"
   },
   "author": {
-    "name": "Kunyi",
-    "twitterId": "@lxchapu",
+    "name": "Byte",
+    "twitterId": "none",
     "avatar": "/img/avatar.jpg"
   },
   "hero": {
-    "name": "Kunyi",
-    "bio": "一个为理想痴狂实干的疯子",
+    "name": "Byte",
+    "bio": "业精于勤荒于嬉，行成于思毁于随",
     "description": "理想是追随稚晖君,欢迎一同学习",
     "socials": [
       {
         "name": "Github",
         "icon": "icon-github",
-        "url": "https://github.com/drowsyindra",
+        "url": "https://github.com/toolren",
         "color": "rgb(239, 70, 107)"
       },
       {
         "name": "bilibili",
         "icon": "icon-bilibili",
-        "url": "https://space.bilibili.com/3546706348084176",
+        "url": "https://space.bilibili.com/477800656",
         "color": "rgb(245, 154, 155)"
       },
       {
         "name": "Email",
         "icon": "icon-mail",
-        "url": "mailto:1162137506@qq.com",
+        "url": "mailto:none@qq.com",
         "color": "rgb(150, 215, 201)"
       },
       {
         "name": "Zhihu",
         "icon": "icon-zhihu",
-        "url": "https://www.zhihu.com/people/wen-dao-81-2-70",
+        "url": "none",
         "color": "rgb(42, 147, 213)"
       },
       {
         "name": "X",
         "icon": "icon-x",
-        "url": "https://x.com/kunyi68226",
+        "url": "none",
         "color": "rgb(106,90,205)"
       }
     ],
