--- a/src/config.json
+++ b/src/config.json
@@ -49,7 +49,7 @@
         "color": "rgb(106,90,205)"
       }
     ],
-    "yiyan": "装作一个白日梦想家，然后征服全世界。"
+    "yiyan": "🔴 目前还没有想到要改成什么话，以后再加上吧~~~~~~~~🔴 "
   },
   "color": {
     "accent": [
