--- a/src/config.json
+++ b/src/config.json
@@ -49,7 +49,7 @@
         "color": "rgb(106,90,205)"
       }
     ],
-    "yiyan": "🔴 目前还没有想到要改成什么话，以后再加上吧~~~~~~~~🔴 "
+    "yiyan": "🔴 种一棵树最好的时间是十年前，其次是现在 🔴 "
   },
   "color": {
     "accent": [
